--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 									a short line about yourself.
 								-->
 								<p>
-									Position <br> Institution
+									Computer Engineer <br> Villanova University
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Astronomy.jpg" target="_blank">Curriculum Vitae</a>
+									<a href="images/avatar.jpg" target="_blank">Curriculum Vitae</a>
 								</p>
 							</div>
 						</div>
