--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									a short line about yourself.
 								-->
 								<p>
-									Computer Engineer <br> Villanova University
+									Computer Engineer <br> at Villanova University
 								</p>
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
