--- a/index.html
+++ b/index.html
@@ -154,10 +154,13 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email:</b> 
+								<b>Email: osaad2019@gmail.com</b> 
 							</p>
 							<p> 
-								<b>Address:</b> 
+								<b>Address: 1739 Snowberry Ridge Rd, Ann Arbor MI, 48103</b> 
+							</p>
+							<p> 
+								<b>Phone Number: (734) 222-4646</b> 
 							</p>
 
 							<!-- 	Here are the fancy icons that link to your social media.
