--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="#" class="icon fa-twitter">
+									<a href="#" class="icon fa-linkedin">
 										<span class="label">Twitter</span>
 									</a>
 								</li>
