--- a/index.html
+++ b/index.html
@@ -177,10 +177,9 @@
 										<span class="label">Twitter</span>
 									</a>
 								</li>
-								<!-- The Facebook icon -->
 								<!-- The GitHub icon -->
 								<li>
-									<a href="#" class="icon fa-github">
+									<a href="https://github.com/osaad2019" class="icon fa-github">
 										<span class="label">GitHub</span>
 									</a>
 								</li>
