--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 									-->
 									<a href="#about">About Me</a>
 								</li>
-								<li>
+								<!--<li>
 									<a href="#research">Research</a>
 								</li>
 								<li>
 									<a href="#community">Community</a>
-								</li>
+								</li>-->
 								<li>
 									<a href="#contact">Contact</a>
-								</li>
+								</li> 
 								<!-- 	You can add another button to your navigation menu by adding
 									another List Item with a link inside of it.
 								-->
@@ -106,14 +106,18 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								<b>Education:</b>
+								     Computer engineering student with a minor in Mechatronics and Engineering Entrepreneurship. 
+								<br> Significant experience with Java and received 5 on the Computer Science AP Exam. Independent 
+								<br> and enjoy challenges. Achieved the rank of Eagle Scout in the Boy Scouts of America. As an 
+								<br> Eagle Scout, I developed leadership, organizational, and communication skills. Two-time high 
+								<br> school football and lacrosse varsity letter holder, which developed my collaboration skills. 
 							</p>
-							<p>
+							<!-- <p>
 								<b>Research Interests:</b>
 							</p>
 							<p>
 								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
-							</p>
+							</p> -->
 						</article>
 
 						<!-- Here is the "Research" card. -->
