--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
 							<h2 class="major">About Me</h2>
 							<!-- Here is an image that you can customize for this page -->
 							<span class="image main">
-								<img src="images/pic01.jpg" alt=""/>
+								<img src="images/Formal Photo.png" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								     Computer engineering student with a minor in Mechatronics and Engineering Entrepreneurship. 
-								<br> Significant experience with Java and received 5 on the Computer Science AP Exam. Independent 
-								<br> and enjoy challenges. Achieved the rank of Eagle Scout in the Boy Scouts of America. As an 
-								<br> Eagle Scout, I developed leadership, organizational, and communication skills. Two-time high 
-								<br> school football and lacrosse varsity letter holder, which developed my collaboration skills. 
+								Computer engineering student with a minor in Mechatronics and Engineering Entrepreneurship. 
+								Significant experience with Java and received 5 on the Computer Science AP Exam. Independent 
+								and enjoy challenges. Achieved the rank of Eagle Scout in the Boy Scouts of America. As an 
+								Eagle Scout, I developed leadership, organizational, and communication skills. Two-time high 
+								school football and lacrosse varsity letter holder, which developed my collaboration skills. 
 							</p>
 							<!-- <p>
 								<b>Research Interests:</b>
