--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 									<!-- 	Note that you need to change the link to point to your page.
 										Replace "#" with your Twitter profile page.
 									-->
-									<a href="www.linkedin.com/in/owen-saad" class="icon fa-linkedin">
+									<a href="https://www.linkedin.com/in/owen-saad" class="icon fa-linkedin">
 										<span class="label">Twitter</span>
 									</a>
 								</li>
