--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 									Try adding "border-radius: 50%;" to the style attribute.
 								-->
-								<img src="images/avatar.jpg" style="width:200px; height:200px; object-fit: cover;">
+								<img src="images/profile.jpg" style="width:280px; height:280px; object-fit: cover;">
 								<!-- 	Here is a paragraph where you can put your position and institution, or
 									a short line about yourself.
 								-->
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Saad 09_2020.pdf" target="_blank">My Resume</a>
+									<a href="images/Saad 09_2020 (4).pdf" target="_blank">My Resume</a>
 								</p>
 							</div>
 						</div>
@@ -206,7 +206,7 @@
 						<!-- 	You can change "Untitled" to your name to show everyone that
 							this is your work.
 						-->
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Saad. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
