--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								Computer engineering student with a minor in Mechatronics and Engineering Entrepreneurship. 
+								Computer engineering student with a minor in Mechatronics and Engineering Entrepreneurship at Villanova University. 
 								Significant experience with Java and received 5 on the Computer Science AP Exam. Independent 
 								and enjoy challenges. Achieved the rank of Eagle Scout in the Boy Scouts of America. As an 
 								Eagle Scout, I developed leadership, organizational, and communication skills. Two-time high 
