--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								Computer engineering student with a minor in Mechatronics and Engineering Entrepreneurship at Villanova University. 
-								Significant experience with Java and received 5 on the Computer Science AP Exam. Independent 
+								Significant experience with Java and received a 5 on the Computer Science AP Exam. Independent 
 								and enjoy challenges. Achieved the rank of Eagle Scout in the Boy Scouts of America. As an 
 								Eagle Scout, I developed leadership, organizational, and communication skills. Two-time high 
 								school football and lacrosse varsity letter holder, which developed my collaboration skills. 
@@ -159,9 +159,6 @@
 							<h2 class="major">Contact</h2>
 							<p> 
 								<b>Email: osaad2019@gmail.com</b> 
-							</p>
-							<p> 
-								<b>Address: 1739 Snowberry Ridge Rd, Ann Arbor MI, 48103</b> 
 							</p>
 							<p> 
 								<b>Phone Number: (734) 222-4646</b> 
