--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
 								Eagle Scout, I developed leadership, organizational, and communication skills. Two-time high 
 								school football and lacrosse varsity letter holder, which developed my collaboration skills. 
 							</p>
+							<span class="image main">
+								<img src="images/profile.jpg" style="width:200px; height:200px; object-fit: cover;">
+							<p>
+								<!-- Items contained in <b> tags are bolded! -->
+								Above is a picture of my eagle project. It is an observation deck I built for my elementary school.
+								The students use it for science class to observe what is in the water in the spring. 
+								<br>(The photo was taken in the fall when there is no water)
+							</p>
 							<!-- <p>
 								<b>Research Interests:</b>
 							</p>
