--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 								school football and lacrosse varsity letter holder, which developed my collaboration skills. 
 							</p>
 							<span class="image main">
-								<img src="images/dock.jpg" style="width:200px; height:200px; object-fit: cover;">
+								<img src="images/dock.jpg" style="width:200px; height:200px; object-fit: cover;" alt=""/>
+							</span>
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								Above is a picture of my eagle project. It is an observation deck I built for my elementary school.
