--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								school football and lacrosse varsity letter holder, which developed my collaboration skills. 
 							</p>
 							<span class="image main">
-								<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover;" alt=""/>
+								<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" alt=""/>
 							</span>
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
