Added personal and professional About me

--- a/index.html
+++ b/index.html
@@ -104,13 +104,35 @@
 								<img src="images/Formal Photo.png" alt=""/>
 							</span>
 							<!-- Here are three paragraphs where you can fill out information about yourself -->
+							<b>
+								Personal Life
+							</b>
 							<p>
-								<!-- Items contained in <b> tags are bolded! -->
-								Computer engineering student with a minor in Mechatronics and Engineering Entrepreneurship at Villanova University. 
-								Significant experience with Java and received a 5 on the Computer Science AP Exam. Independent 
-								and enjoy challenges. Achieved the rank of Eagle Scout in the Boy Scouts of America. As an 
-								Eagle Scout, I developed leadership, organizational, and communication skills. Two-time high 
-								school football and lacrosse varsity letter holder, which developed my collaboration skills. 
+								Computer engineering student with a minor in Mechatronics and Computer Science at Villanova University. 
+								Experience with C++, Python, VHDL, SQL and Java. Very good at learning on the fly and quick to learn
+								new skills. Independent enjoy challenges and love to learn. Achieved the rank of Eagle Scout in the Boy
+								Scouts of America. As an Eagle Scout, I developed leadership, organizational, and communication skills. 
+								Two-time high school football and lacrosse varsity letter holder, which developed my collaboration skills. 
+							</p>
+							<b>
+								Professional Life
+							</b>
+							<p>
+								Over time gained experiece through various internships, projects and research oppotunities:
+									- Interned as a software engineer at L3Harris in the summer of 2022. Expanded my knowledge of C++,
+									  Python and learned how to work on a software team with an expansive code base
+									- Interned at a start up in Portland Maine called KinoTek in the summer of 2021. I learned the ins and outs
+									  of a young software company. I got to feed my passion for tech, entrepreneurship, and athletics all in one
+									  place.
+									- Participated in the Villanova Engineering INNOVATE program in the summer of 2021. A team of three other
+									  Villanova engineers and I designed a working prototype of glasses that utilized a raspberry pi and 
+									  transparent OLED to actively display voice to text for the auditorily impaired
+									- Feburary of 2021 joined a research lab which studies how words and language is proceived. While in the 
+									  lab time is split between running student subjects for active studies and working on an in-house machine 
+									  learning model. The model takes in part of a sentence and is supposed to predict the next word. To enhance
+									  the model similar other models are looked at and broken down to see if combining parts of it with the lab’s
+									  model would help increase accuracy.
+
 							</p>
 							<span class="image main">
 								<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
