updated personal life

--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
 							<p>
 								Computer engineering student with a minor in Mechatronics and Computer Science at Villanova University. 
 								Experience with C++, Python, VHDL, SQL and Java. Very good at learning on the fly and quick to learn
-								new skills. Independent enjoy challenges and love to learn. Achieved the rank of Eagle Scout in the Boy
-								Scouts of America. As an Eagle Scout, I developed leadership, organizational, and communication skills. 
-								Two-time high school football and lacrosse varsity letter holder, which developed my collaboration skills. 
+								new skills. Independent enjoy challenges and love to learn. Huge love for the outdoors and staying active.
+								Achieved the rank of Eagle Scout in the Boy Scouts of America. As an Eagle Scout, I developed leadership, 
+								organizational, and communication skills. Two-time high school football and lacrosse varsity letter holder, 
+								which developed my collaboration skills. 
 							</p>
 							<b>
 								Professional Life
