added senior design project

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 							</b>
 							<p>
 								Over time gained experiece through various internships, projects and research oppotunities:
+									- Currently working on senior design project, a Virtual Reality application for soccer goalies to use to
+									  train for saving penalty kicks. Creating it using unreal engine for the enviroment and motion builder for
+									  the motion of the avatar and flight of the ball.
 									- Interned as a software engineer at L3Harris in the summer of 2022. Expanded my knowledge of C++,
 									  Python and learned how to work on a software team with an expansive code base
 									- Interned at a start up in Portland Maine called KinoTek in the summer of 2021. I learned the ins and outs
@@ -136,6 +139,7 @@
 
 							</p>
 							<span class="image main">
+								<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
 								<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
 							</span>
 							<p>
