put images side by side

--- a/index.html
+++ b/index.html
@@ -138,10 +138,18 @@
 									  model would help increase accuracy.
 
 							</p>
-							<span class="image main">
+							<div class="row">
+  								<div class="column">
+    									<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
+ 			 					</div>
+  								<div class="column">
+    									<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
+  								</div>
+							</div>
+							<!-- <span class="image main">
+								
 								<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
-								<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
-							</span>
+							</span> -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
 								Above is a picture of my eagle project. It is an observation deck I built for my elementary school.
