--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 
 							</p>
 							<div class="row">
-  								<div class="column">
+  								<div class="col">
     									<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
  			 					</div>
-  								<div class="column">
+  								<div class="col">
     									<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
   								</div>
 							</div>
