updated photo and captions

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     									<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
  			 					</div>
   								<div class="col">
-    									<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
+    									<img src="images/Soundsight.PNG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
   								</div>
 							</div>
 							<!-- <span class="image main">
@@ -152,9 +152,12 @@
 							</span> -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								Above is a picture of my eagle project. It is an observation deck I built for my elementary school.
+								Above left is a picture of my eagle project. It is an observation deck I built for my elementary school.
 								The students use it for science class to observe what is in the water in the spring. 
-								<br>(The photo was taken in the fall when there is no water)
+								(The photo was taken in the fall when there is no water)
+								
+								Above right is a picture of my team's project from the INNOVATE program. The white box is the raspberry pi
+								which sits in the user's pocket. The microphone pins to the user's shirt.
 							</p>
 							<!-- <p>
 								<b>Research Interests:</b>
