--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     									<img src="images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
  			 					</div>
   								<div class="col">
-    									<img src="images/Soundsight.PNG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
+    									<img src="images/Soundsight.png" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center" alt=""/>
   								</div>
 							</div>
 							<!-- <span class="image main">
