--- a/index.html
+++ b/index.html
@@ -110,28 +110,28 @@
 							<p>
 								Computer engineering student with a minor in Mechatronics and Computer Science at Villanova University. 
 								Experience with C++, Python, VHDL, SQL and Java. Very good at learning on the fly and quick to learn
-								new skills. Independent enjoy challenges and love to learn. Huge love for the outdoors and staying active.
+								new skills. Independent, enjoy challenges, and love to learn. Huge love for the outdoors and staying active.
 								Achieved the rank of Eagle Scout in the Boy Scouts of America. As an Eagle Scout, I developed leadership, 
 								organizational, and communication skills. Two-time high school football and lacrosse varsity letter holder, 
 								which developed my collaboration skills. 
 							</p>
 							<b>
 								Professional Life
-							</b>
+							</b> 
 							<p>
-								Over time gained experiece through various internships, projects and research oppotunities:
-									- Currently working on senior design project, a Virtual Reality application for soccer goalies to use to
-									  train for saving penalty kicks. Creating it using unreal engine for the enviroment and motion builder for
-									  the motion of the avatar and flight of the ball.
-									- Interned as a software engineer at L3Harris in the summer of 2022. Expanded my knowledge of C++,
+								Over time gained experiece through various internships, projects, and research opportunities:
+									- Currently working on senior design project, a Virtual Reality application for soccer goalies to practice
+									  defending penalty kicks. Creating it using <a href="https://www.unrealengine.com/en-US/?utm_source=GoogleSearch&utm_medium=Performance&utm_campaign=3Q_UnrealEngine_MMT_Brand_Link-Clicks_Search_US&utm_id=18077327933&sub_campaign=&utm_content=&utm_term=unrealengine">Unreal Engine</a>, a 3D computer graphic game engine, for the 
+									  enviroment, animation of the avatar, and the flight path of the ball.
+									- Interned as a software engineer at <a href="https://www.l3harris.com/">L3Harris</a> in the summer of 2022. Expanded my knowledge of C++,
 									  Python and learned how to work on a software team with an expansive code base
-									- Interned at a start up in Portland Maine called KinoTek in the summer of 2021. I learned the ins and outs
+									- Interned at a start up, KinoTek, in Portland, Maine in the summer of 2021. I learned the ins and outs
 									  of a young software company. I got to feed my passion for tech, entrepreneurship, and athletics all in one
 									  place.
 									- Participated in the Villanova Engineering INNOVATE program in the summer of 2021. A team of three other
 									  Villanova engineers and I designed a working prototype of glasses that utilized a raspberry pi and 
 									  transparent OLED to actively display voice to text for the auditorily impaired
-									- Feburary of 2021 joined a research lab which studies how words and language is proceived. While in the 
+									- February of 2021 joined the <a href="https://wraplab.co/">VU WRAP Lab</a>, Villanova University Word Recognition & Auditory Perception Lab. While in the 
 									  lab time is split between running student subjects for active studies and working on an in-house machine 
 									  learning model. The model takes in part of a sentence and is supposed to predict the next word. To enhance
 									  the model similar other models are looked at and broken down to see if combining parts of it with the lab’s
