Last of Grammar corrections

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
 							<p>
 								Over time gained experiece through various internships, projects, and research opportunities:
 									- Currently working on senior design project, a Virtual Reality application for soccer goalies to practice
-									  defending penalty kicks. Creating it using <a href="https://www.unrealengine.com/en-US/?utm_source=GoogleSearch&utm_medium=Performance&utm_campaign=3Q_UnrealEngine_MMT_Brand_Link-Clicks_Search_US&utm_id=18077327933&sub_campaign=&utm_content=&utm_term=unrealengine">Unreal Engine</a>, a 3D computer graphic game engine, for the 
+									  defending penalty kicks. Creating it using 
+								 	  <a href="https://www.unrealengine.com/en-US/?utm_source=GoogleSearch&utm_medium=Performance&utm_campaign=3Q_UnrealEngine_MMT_Brand_Link-Clicks_Search_US&utm_id=18077327933&sub_campaign=&utm_content=&utm_term=unrealengine">Unreal Engine</a>
+									  , a 3D computer graphic game engine, for the 
 									  enviroment, animation of the avatar, and the flight path of the ball.
 									- Interned as a software engineer at <a href="https://www.l3harris.com/">L3Harris</a> in the summer of 2022. Expanded my knowledge of C++,
 									  Python and learned how to work on a software team with an expansive code base
@@ -131,11 +133,10 @@
 									- Participated in the Villanova Engineering INNOVATE program in the summer of 2021. A team of three other
 									  Villanova engineers and I designed a working prototype of glasses that utilized a raspberry pi and 
 									  transparent OLED to actively display voice to text for the auditorily impaired
-									- February of 2021 joined the <a href="https://wraplab.co/">VU WRAP Lab</a>, Villanova University Word Recognition & Auditory Perception Lab. While in the 
-									  lab time is split between running student subjects for active studies and working on an in-house machine 
-									  learning model. The model takes in part of a sentence and is supposed to predict the next word. To enhance
-									  the model similar other models are looked at and broken down to see if combining parts of it with the lab’s
-									  model would help increase accuracy.
+									- February of 2021 joined the <a href="https://wraplab.co/">VU WRAP Lab</a>, 
+									  Villanova University Word Recognition & Auditory Perception Lab. While in the 
+									  lab, time is split between running student subjects for active studies, and working on an in-house machine 
+									  learning model. The model is designed to take in part of a sentence and predict the next word. 
 
 							</p>
 							<div class="row">
@@ -152,10 +153,10 @@
 							</span> -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								Above left is a picture of my eagle project. It is an observation deck I built for my elementary school.
+								Above left, is a picture of my Eagle Project. It is an observation deck built for Dicken Elementray, Ann Arbor, MI.
 								The students use it for science class to observe what is in the water in the spring. 
 								(The photo was taken in the fall when there is no water)
-								
+								<br>
 								Above right is a picture of my team's project from the INNOVATE program. The white box is the raspberry pi
 								which sits in the user's pocket. The microphone pins to the user's shirt.
 							</p>
