--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
 									  enviroment, animation of the avatar, and the flight path of the ball.
 									- Interned as a software engineer at <a href="https://www.l3harris.com/">L3Harris</a> in the summer of 2022. Expanded my knowledge of C++,
 									  Python and learned how to work on a software team with an expansive code base
-									- Interned at a start up, KinoTek, in Portland, Maine in the summer of 2021. I learned the ins and outs
+									- Interned at a start up, <a href="https://kinotek.com/">KinoTek</a>, in Portland, Maine in the summer of 2021. I learned the ins and outs
 									  of a young software company. I got to feed my passion for tech, entrepreneurship, and athletics all in one
 									  place.
-									- Participated in the Villanova Engineering INNOVATE program in the summer of 2021. A team of three other
+									- Participated in the Villanova Engineering <a href="https://www1.villanova.edu/university/engineering/villanova-engineering-experience/real-world-experience/L3Harris-Summer-Program.html">INNOVATE</a> 
+									  program in the summer of 2021. A team of three other
 									  Villanova engineers and I designed a working prototype of glasses that utilized a raspberry pi and 
 									  transparent OLED to actively display voice to text for the auditorily impaired
 									- February of 2021 joined the <a href="https://wraplab.co/">VU WRAP Lab</a>, 
