--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<!-- Here is a paragraph where you can put a link to your CV -->
 								<p>
 									<!-- Note you will want to change where this points to! -->
-									<a href="images/Saad 12_2020.pdf" target="_blank">My Resume</a>
+									<a href="images/09_2022 Base Resume - Google Docs.pdf" target="_blank">My Resume</a>
 								</p>
 							</div>
 						</div>
