line breaks added

--- a/index.html
+++ b/index.html
@@ -120,21 +120,21 @@
 							</b> 
 							<p>
 								Over time gained experiece through various internships, projects, and research opportunities:
-									- Currently working on senior design project, a Virtual Reality application for soccer goalies to practice
+								<br> &emsp; - Currently working on senior design project, a Virtual Reality application for soccer goalies to practice
 									  defending penalty kicks. Creating it using 
 								 	  <a href="https://www.unrealengine.com/en-US/?utm_source=GoogleSearch&utm_medium=Performance&utm_campaign=3Q_UnrealEngine_MMT_Brand_Link-Clicks_Search_US&utm_id=18077327933&sub_campaign=&utm_content=&utm_term=unrealengine">Unreal Engine</a>
 									  , a 3D computer graphic game engine, for the 
 									  enviroment, animation of the avatar, and the flight path of the ball.
-									- Interned as a software engineer at <a href="https://www.l3harris.com/">L3Harris</a> in the summer of 2022. Expanded my knowledge of C++,
+								<br> &emsp; - Interned as a software engineer at <a href="https://www.l3harris.com/">L3Harris</a> in the summer of 2022. Expanded my knowledge of C++,
 									  Python and learned how to work on a software team with an expansive code base
-									- Interned at a start up, <a href="https://kinotek.com/">KinoTek</a>, in Portland, Maine in the summer of 2021. I learned the ins and outs
+								<br> &emsp; - Interned at a start up, <a href="https://kinotek.com/">KinoTek</a>, in Portland, Maine in the summer of 2021. I learned the ins and outs
 									  of a young software company. I got to feed my passion for tech, entrepreneurship, and athletics all in one
 									  place.
-									- Participated in the Villanova Engineering <a href="https://www1.villanova.edu/university/engineering/villanova-engineering-experience/real-world-experience/L3Harris-Summer-Program.html">INNOVATE</a> 
+								<br> &emsp; - Participated in the Villanova Engineering <a href="https://www1.villanova.edu/university/engineering/villanova-engineering-experience/real-world-experience/L3Harris-Summer-Program.html">INNOVATE</a> 
 									  program in the summer of 2021. A team of three other
 									  Villanova engineers and I designed a working prototype of glasses that utilized a raspberry pi and 
 									  transparent OLED to actively display voice to text for the auditorily impaired
-									- February of 2021 joined the <a href="https://wraplab.co/">VU WRAP Lab</a>, 
+								<br> &emsp; - February of 2021 joined the <a href="https://wraplab.co/">VU WRAP Lab</a>, 
 									  Villanova University Word Recognition & Auditory Perception Lab. While in the 
 									  lab, time is split between running student subjects for active studies, and working on an in-house machine 
 									  learning model. The model is designed to take in part of a sentence and predict the next word. 
