More grammar updates

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							</b>
 							<p>
 								Computer engineering student with a minor in Mechatronics and Computer Science at Villanova University. 
-								Experience with C++, Python, VHDL, SQL and Java. Very good at learning on the fly and quick to learn
+								Experience with C++, Python, VHDL, SQL and Java. Very quick to learn
 								new skills. Independent, enjoy challenges, and love to learn. Huge love for the outdoors and staying active.
 								Achieved the rank of Eagle Scout in the Boy Scouts of America. As an Eagle Scout, I developed leadership, 
 								organizational, and communication skills. Two-time high school football and lacrosse varsity letter holder, 
@@ -119,25 +119,25 @@
 								Professional Life
 							</b> 
 							<p>
-								Over time gained experiece through various internships, projects, and research opportunities:
-								<br> &emsp; - Currently working on senior design project, a Virtual Reality application for soccer goalies to practice
-									  defending penalty kicks. Creating it using 
+								Over time gained experience through numerous internships, projects, and research opportunities:
+								<br> &emsp; - Currently working on my senior design project, a Virtual Reality application for soccer goalies to practice
+									  defending penalty kicks. Using 
 								 	  <a href="https://www.unrealengine.com/en-US/?utm_source=GoogleSearch&utm_medium=Performance&utm_campaign=3Q_UnrealEngine_MMT_Brand_Link-Clicks_Search_US&utm_id=18077327933&sub_campaign=&utm_content=&utm_term=unrealengine">Unreal Engine</a>
 									  , a 3D computer graphic game engine, for the 
-									  enviroment, animation of the avatar, and the flight path of the ball.
+									  environment, Animating the avatar, and the flight path of the ball.
 								<br> &emsp; - Interned as a software engineer at <a href="https://www.l3harris.com/">L3Harris</a> in the summer of 2022. Expanded my knowledge of C++,
 									  Python and learned how to work on a software team with an expansive code base
-								<br> &emsp; - Interned at a start up, <a href="https://kinotek.com/">KinoTek</a>, in Portland, Maine in the summer of 2021. I learned the ins and outs
+								<br> &emsp; - Interned at a startup, <a href="https://kinotek.com/">KinoTek</a> (Portland, Maine) in the summer of 2021. I learned the ins and outs
 									  of a young software company. I got to feed my passion for tech, entrepreneurship, and athletics all in one
 									  place.
 								<br> &emsp; - Participated in the Villanova Engineering <a href="https://www1.villanova.edu/university/engineering/villanova-engineering-experience/real-world-experience/L3Harris-Summer-Program.html">INNOVATE</a> 
 									  program in the summer of 2021. A team of three other
-									  Villanova engineers and I designed a working prototype of glasses that utilized a raspberry pi and 
-									  transparent OLED to actively display voice to text for the auditorily impaired
-								<br> &emsp; - February of 2021 joined the <a href="https://wraplab.co/">VU WRAP Lab</a>, 
-									  Villanova University Word Recognition & Auditory Perception Lab. While in the 
-									  lab, time is split between running student subjects for active studies, and working on an in-house machine 
-									  learning model. The model is designed to take in part of a sentence and predict the next word. 
+									  Villanova engineers and I designed a working prototype to aid the auditorily impaired. The prototype is a pair of glasses that utilizes a raspberry pi and 
+									  transparent OLED to actively display voice to text on the lenses.
+								<br> &emsp; - February of 2021 joined the <a href="https://wraplab.co/">VU WRAP </a>, 
+									  (Villanova University Word Recognition & Auditory Perception) Lab. While in the 
+									  lab, time is divided between running student subjects for active studies and working on an in-house machine 
+									  learning model. The model is designed to take a part of a sentence and predict the next word. 
 
 							</p>
 							<div class="row">
@@ -154,9 +154,9 @@
 							</span> -->
 							<p>
 								<!-- Items contained in <b> tags are bolded! -->
-								Above left, is a picture of my Eagle Project. It is an observation deck built for Dicken Elementray, Ann Arbor, MI.
+								Above left is a picture of my Eagle Project. It is an observation deck built for Dicken Elementary, Ann Arbor, MI.
 								The students use it for science class to observe what is in the water in the spring. 
-								(The photo was taken in the fall when there is no water)
+								(Note: The photo was taken in the fall when there is no water)
 								<br>
 								Above right is a picture of my team's project from the INNOVATE program. The white box is the raspberry pi
 								which sits in the user's pocket. The microphone pins to the user's shirt.
