personal sections working update

--- a/index.html
+++ b/index.html
@@ -210,24 +210,21 @@
 								<img src="assets/images/HawaiiPersonal.JPEG" alt=""/>
 							</span>
 							<p>
-								&emsp;I graduated from Villanova University in May of 2023. I have a deep love of technology, sports and the enviroment.
-								I have gained diverse experience from college, internships and my job at L3Harris. I love to learn and finding new 
-								things to challenge me, these experiences and drive to learn have lead to me being proficient in: Fullstack development 
-								(.Net, Angular, React, React Native, MySQL), Various coding languages (Python, C#, C++/C, Java, JavaScript), Agile software
-								development (JIRA, Scrum, KanBan, GitHub, GitLab, BitBucket). I learn new skills and very quickly and many of the skills I listed
-								I learned on the job. <br> 
+								&emsp; 
+								I'm deeply passionate about technology, sports, and the environment, with diverse experience from college, internships, and my current role at L3Harris. 
+								Proficient in full-stack development ( .Net, Angular, React, React Native, MySQL), various coding languages (Python, C#, C++/C, Java, JavaScript), and Agile methodologies 
+								(JIRA, Scrum, KanBan, GitHub, GitLab, BitBucket). I quickly learned many of the skills listed on the job. Adaptability, 
+								a robust skill set, and a fervent desire for continuous improvement position me for exciting opportunities in the tech industry. <br> 
 								
-								&emsp;I love sports, from football to lacrosse to soccer. I played varsity football and lacrosse in high school. Since then I find
-								any way I can to play sports, from club to intramural to city recreational leagues. I also love combining my love of sports
-								and technology which is why I interned at KinoTek, and is the reason behind my senior design project idea and my particpation 
-								in the sport tech sprint. I love the idea of using technology to improving sports and personal fitness in general <br>
+								&emsp; I love so many sports, ranging from football and lacrosse to soccer. During high school, I played varsity football and lacrosse, and my enthusiasm for 
+								sports has only grown since then. I actively seek opportunities to play, whether in club, intramural, or now recreational leagues since I have graduated. Combining my love for sports 
+								and technology, I interned at KinoTek, pursued a sport-tech-themed senior design project, and participated in the sport tech sprint. I'm fascinated by the potential 
+								of technology to enhance sports performance and overall fitness. <br>
 
-								&emsp;Going hand and hand with sports, I love staying active, espically staying active outdoors. I love finding any reason to be outside,
-								from hiking, to swimming, to just playing catch outside. My love of the outdoors fueled me to paricipate in the Boy Scouts of America 
-								when I was younger. In that time, I achieved the highest rank, Eagle Scout. As an Eagle Scout, I developed leadership, 
-								organizational, and communication skills. Two-time high school football and lacrosse varsity letter holder, 
-								which developed my collaboration skills. My love of the outdoors and my particpation in Boy Scouts has made me develop a deep love
-								of the enviroment and given me a disire to preserve it for future generations.
+								&emsp;Complementing my passion for sports is my love for an active lifestyle, particularly outdoors. Whether it's hiking, swimming, or simply playing catch outside, 
+								I find any excuse to be in nature. My affinity for the outdoors led me to join the Boy Scouts of America in my younger years, culminating in achieving the esteemed 
+								rank of Eagle Scout. Through this experience, I honed leadership, organizational, and communication skills. The combination of my outdoor enthusiasm and Boy Scouts 
+								involvement has instilled in me a profound love for the environment and a commitment to its preservation for future generations.
 							</p>
 							<img src="assets/images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center"/>
 
