personal image format change

--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 								rank of Eagle Scout. Through this experience, I honed leadership, organizational, and communication skills. The combination of my outdoor enthusiasm and Boy Scouts 
 								involvement has instilled in me a profound love for the environment and a commitment to its preservation for future generations.
 							</p>
-							<img src="assets/images/dock.JPG" style="width:200px; height:200px; object-fit: cover; border-radius: 50%;" class="center"/>
-
-						  <p>
+							<img src="assets/images/dock.JPG" style="border-radius: 10%;" class="center"/>
+							<br>
+						  <p style="font-size:75%; text-align:center">
 							  Above is a picture of my Eagle Project. It is an observation deck built for Dicken Elementary, Ann Arbor, MI.
 							  The students use it for science class to observe what is in the water in the spring. 
 							  (Note: The photo was taken in the fall when there is no water)
