--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 								create over 30 realistic soccer ball flight paths. The application was deployed on a Meta Oculus as seen in one of the photos above.
 							</p>
 							<p style="font-size:125%; text-align:center">
-								<b>Teach Assistant</b>
+								<b>Teaching Assistant</b>
 							</p>
 							<p>
 								&emsp;My senior year of college I was a teaching assistant for two courses. I held heavily atteneded office hours and 
