L3Harris to SIG title

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 								<img src="assets/images/profile.jpg" style="width:280px; height:280px; object-fit: cover; border-radius: 50%;">
 
 								<p style="font-size:125%">
-									Associate Software Engineer <br> 
-									at L3Harris
+									Software Developer <br> 
+									at Susquehanna International Group (SIG)
 								</p>
 								<p style="font-size:80%">
 									2023 Villanova University Graduate <br>
